--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,9 @@
+auxiliary.org-netbeans-modules-html-editor-lib.default-html-public-id=HTML5
+browser.reload.on.save=true
 include.path=${php.global.include.path}
 php.version=PHP_54
 source.encoding=UTF-8
 src.dir=.
-tags.asp=false
+tags.asp=true
 tags.short=true
 web.root=.
