--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,8 @@
-auxiliary.org-netbeans-modules-html-editor-lib.default-html-public-id=HTML5
 browser.reload.on.save=true
 include.path=${php.global.include.path}
-php.version=PHP_54
+php.version=PHP_55
 source.encoding=UTF-8
 src.dir=.
-tags.asp=true
-tags.short=true
+tags.asp=false
+tags.short=false
 web.root=.
